positive.txt and negative.txt added with makefile update for easy running

--- a/assignment2/Makefile
+++ b/assignment2/Makefile
@@ -11,8 +11,11 @@ OBJS = main.o parser.o interpreter.o
 all: main
 
 # Target to run the executable
-run: main
-	./main file.txt
+pos: main
+	./main positive.txt
+
+neg: main
+	./main negative.txt
 
 # Target to link the object files and create the main executable
 main: $(OBJS)
