Some bugfixes to the parser. Added new types for caret, colon

--- a/assignment3/Makefile
+++ b/assignment3/Makefile
@@ -15,10 +15,12 @@ run: main
 	./main
 
 pos:
-	./main < positive.txt
+	make
+	./main positive.txt
 
 neg:
-	./main < negative.txt
+	make
+	./main negative.txt
 
 # Target link objects
 main: $(OBJS)
