Some more bugfixes. Almost complete functionality but some error cases need to be fixed still. Added all positive/negative from the course notes

--- a/assignment3/Makefile
+++ b/assignment3/Makefile
@@ -14,12 +14,10 @@ all: main
 run: main
 	./main
 
-pos:
-	make
+pos: main
 	./main positive.txt
 
-neg:
-	make
+neg: main
 	./main negative.txt
 
 # Target link objects
