Assignment 1 now reads only from standard input. Also exit with code 1 at unsuccessful parsing for both assignments 1 and 2 as stated in the course notes.

--- a/assignment1/Makefile
+++ b/assignment1/Makefile
@@ -14,6 +14,12 @@ all: main
 run: main
 	./main
 
+pos: main
+	./main < positive.txt
+
+neg: main
+	./main < negative.txt
+
 # Target to link the object files and create the main executable
 main: $(OBJS)
 	$(CC) -o main $(OBJS)
