Comments and formatting. Updated README.md for all. Adjusted Makefiles as specified by in the course notes.

--- a/assignment1/Makefile
+++ b/assignment1/Makefile
@@ -4,21 +4,19 @@ CC = g++
 # Compilation parameters
 CompileParms = -c -Wall -std=c++14 -O2
 
-# List of object files
-OBJS = main.o parser.o
+# Object files
+OBJS := $(patsubst %.cc,%.o,$(wildcard *.cc))
 
 # Default target
 all: main
+build: main
 
 # Target to run the executable
 run: main
-	./main
-
-pos: main
-	./main < positive.txt
+	./main < positives.txt
 
 neg: main
-	./main < negative.txt
+	./main < negatives.txt
 
 # Target to link the object files and create the main executable
 main: $(OBJS)
