--- a/assignment3/Makefile
+++ b/assignment3/Makefile
@@ -15,10 +15,10 @@ run: main
 	./main
 
 pos: main
-	./main positive.txt
+	./main positives.txt
 
 neg: main
-	./main negative.txt
+	./main negatives.txt
 
 # Target link objects
 main: $(OBJS)
